#24 Fixed radio stations logos being too blurry and or small at home. Also fixed logos in header

--- a/public/css/home.css
+++ b/public/css/home.css
@@ -30,6 +30,7 @@ body.home{
                     justify-content: center;
                     align-items: center;
                     transition: 0.2s ease-in;
+                    
                     img{
                         max-width: 140px;
                         max-height: 60px;
@@ -40,6 +41,22 @@ body.home{
                         box-shadow: 0px 0px 16px 0px rgba(0, 0, 0, 0.55);
                         img{
                             scale: 1.3;
+                        }
+                    }
+                    @media (min-width: 860px){
+                        picture{
+                            width: 100%;
+                            height: 100%;
+                            display: flex;
+                            justify-content: center;
+                            img{
+                                width: 70%;
+                                height: 100%;
+                                max-width: none;
+                                max-height: none;
+                                object-fit: contain;
+                                object-position: center;
+                            }
                         }
                     }
                 }
